Funcionalidade: validação de permissoes